# coltec-codespaces

./: .gitignore  AGENTS.md  COLTEC_CODESPACES_SIMPLIFICATION.md  README-coltec-workspace.md  README.md  RUST_DAEMON_PLAN.md  copier.yaml  fnox.toml  mise.toml  pyproject.toml
.devcontainer/: devcontainer.json  workspace-spec.yaml
.devcontainer/scripts/: post-create.sh
.github/workflows/: build-base.yml  release.yml  rust-ci.yml
.serena/: project.yml
coltec-daemon/: .dockerignore  Cargo.toml  Dockerfile  workspace-spec.schema.json
coltec-daemon/schema/: workspace-spec.schema.json
coltec-daemon/scripts/: post-start.sh
coltec-daemon/src/: cli.rs  config.rs  lib.rs  main.rs  plan.rs  sync.rs
coltec-daemon/tests/: e2e_sync.rs  validate_spec.rs
coltec-daemon/tests/data/: invalid_duplicate_sync_name.yaml  invalid_interval_too_low.yaml  invalid_replicated_no_sync.yaml  invalid_workspace.yaml  named_remotes_workspace.yaml  valid_workspace.yaml
devcontainer_templates/: base.json.jinja2  monorepo.json.jinja2  node.json.jinja2  python.json.jinja2  rust.json.jinja2
docker/base/: Dockerfile  test.sh
docker/base-dind/: Dockerfile  test.sh
docker/base-dind-net/: Dockerfile  test.sh
docker/base-net/: Dockerfile  test.sh
docker/scripts/: install-core-packages.sh  install-docker.sh  install-juicefs.sh  install-mise.sh  install-rclone.sh  install-tailscale.sh
docs/: customization.md  multi-workspace.md
docs/archive/: COLTEC_CODESPACES_SIMPLIFICATION.md  RUST_DAEMON_PLAN.md
extensions/coltec-network/: copier.yaml
extensions/coltec-network/template/.devcontainer/: supervisord.conf
extensions/coltec-opencode/: copier.yaml
extensions/coltec-opencode/template/: .gitignore  AGENTS.md.jinja  README-coltec-workspace.md.jinja  mise.toml.jinja
extensions/coltec-opencode/template/.devcontainer/: devcontainer.json.jinja
extensions/coltec-opencode/template/.opencode/: .gitignore  README.md  opencode.json
extensions/coltec-venture/: copier.yaml
extensions/coltec-venture/template/: README-coltec-workspace.md.jinja
extensions/coltec-venture/template/.devcontainer/: devcontainer.json.jinja  supervisord.conf  workspace-spec.yaml.jinja
scripts/: build-all.sh  cs.sh  dc-up.sh  test-image.sh
specs/examples/: formualizer-dev.yaml
src/coltec_codespaces/: __init__.py  __main__.py  manifest.py  provision.py  spec.py  storage.py  sync_daemon.py  up.py  validate.py
template/: .copier-answers.yml.jinja  README-coltec-workspace.md
template/.devcontainer/: devcontainer.json.jinja  supervisord.conf  workspace-spec.yaml.jinja
template/.devcontainer/scripts/: post-create.sh  post-start.sh
template/devcontainer_templates/: devcontainer.json.jinja2
templates/workspace_scaffold/.devcontainer/: supervisord.conf
tests/: conftest.py  test_provision.py  test_rclone.py  test_spec.py  test_storage.py  test_update.py
(+16 files in other folders)
