[project]
name = "coltec-codespaces"
version = "0.1.0"
description = "Coltec devcontainer specs and tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copier>=9.11.0",
    "jinja2>=3.1.6",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
coltec-codespaces = "coltec_codespaces.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]
