[package]
name = "coltec-daemon"
version = "0.0.1"
edition = "2021"
description = "Rust structures and schema generation for Coltec workspace-spec"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
pretty_assertions = "1"
